# MizuVM

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  Doxyfile  LICENSE  README.md  exception.hpp  opcode.hpp  operations.float.hpp  operations.hpp  operations.parallel.hpp  operations.unsafe.hpp  test.cpp  windows.cpp
.github/workflows/: build-docs.yaml
cmake/: AddFlagIfCompiles.cmake  SphinxConfig.cmake  TargetArch.cmake
docs/: conf.py  doxygen.rst  index.md  index.rst  requirements.txt
ffi/: dynamic_loader.hpp  instructions.hpp  operations.hpp
ffi/wasm/: CMakeLists.txt
instructions/: core.hpp  debug.hpp  f32.hpp  f64.hpp  float.hpp  lookup.hpp  parallel.hpp  simd.hpp  unsafe.hpp
mizu/: exception.hpp  instructions.hpp  opcode.hpp  operations.hpp  portable_format.hpp  serialize.hpp
operations/: core.hpp  float.hpp  lookup.hpp  parallel.hpp  unsafe.hpp
simd/: f32.hpp
tests/: bubble.cpp  fib.cpp  matmul.simd.cpp  test.bak.cpp  test.cpp
